Adjusted site setting for testing purposes

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ owner: HibbiSoft AB
 first_published: 2018
 email: pjbrollop@hibbisoft.se
 baseurl: ""
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://hibbisoft.com/viklunds2018.github.com" # the base hostname & protocol for your site
 social:
   #twitter: https://twitter.com/<username>
   #github: https://github.com/<username>
