Changes after feedback from Peter

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # Site settings
 title: Peter & Johannas Bröllop
-description: Välkomna till vår bröllopssida. Här finner ni allt ni behöver veta inför vår speciella dag.
+description: Välkomna till vår bröllopssida. Här finner ni allt ni behöver veta inför vår speciella dag
 owner: HibbiSoft AB 
 first_published: 2018
 email: pjbrollop@hibbisoft.se
