--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: Välkomna till vår bröllopssida. Här finner ni allt ni behöver 
 owner: HibbiSoft AB 
 first_published: 2018
 email: pjbrollop@hibbisoft.se
-baseurl: "/viklunds2018.github.com"
-url: "http://hibbisoft.com" # the base hostname & protocol for your site
+baseurl: "/"
+url: "http://viklunds2018.se" # the base hostname & protocol for your site
 social:
   #twitter: https://twitter.com/<username>
   #github: https://github.com/<username>
